--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ body > input[type="radio"] {
 	margin-top: 34px;
 }
 .catalog .catalog-ice {
-	float: left;
+	/*float: left;
 	width: 293px;
 	margin-right: 13px;
 	margin-left: -13px;
@@ -710,7 +710,16 @@ body > input[type="radio"] {
 	padding-top: 6px;
 	text-align: center;
 	border-top-right-radius: 15px;
-	border-top-left-radius: 15px;
+	border-top-left-radius: 15px;*/
+	float: left;
+	width: 293px;
+	margin-right: 13px;
+	margin-left: -13px;
+	margin-bottom: 40px;
+	padding-top: 6px;
+	border-top-right-radius: 7px;
+	border-top-left-radius: 7px;
+	text-align: center;
 }
 .catalog-ice .tag {
 	position: absolute;
@@ -725,7 +734,7 @@ body > input[type="radio"] {
 	border-radius: 50%;
 }
 .catalog-ice .cost {
-	display: inline-block;
+	/*display: inline-block;
 	vertical-align: top;
 	position: relative;
 	bottom: 64px;
@@ -737,7 +746,19 @@ body > input[type="radio"] {
 	text-shadow: 1px 1px 3px #5a6762;
 	cursor: pointer;
 	margin-right: 113px;
+	text-align: left;*/
+	position: absolute;
+	bottom: 64px;
+	left: 13px;
 	text-align: left;
+	font-size: 45px;
+	line-height: 45px;
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	text-shadow: 1px 1px 3px #5a6762;
+	cursor: pointer;
+	
 }
 .catalog-ice .weight {
 	font-size: 32px;
@@ -748,9 +769,10 @@ body > input[type="radio"] {
 	text-shadow: 1px 1px 3px #5a6762;
 	margin-left: 6px;
 	cursor: pointer;
+	
 }
 .catalog-ice .specification {
-	position: relative;
+	/*position: relative;
 	margin: 0;
 	bottom: 43px;
     padding-left: 13px;
@@ -761,22 +783,58 @@ body > input[type="radio"] {
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-align: center;
+	text-decoration: underline;*/
+	display: block;
+    padding-left: 18px;
+    padding-right: 18px;
+    margin-top: 7px;
+	text-align: center;
+	font-size: 16px;
+	line-height: 22px;
+	color: #ffffff;
+	font-weight: 500;
+	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: underline;
 }
 .catalog-ice .btn-hover-shadow {
-	position: absolute;
+	/*position: absolute;
 	width: 293px;
 	height: 25px;
 	background-color: #9db1a5;
     border-bottom-right-radius: 15px;
 	border-bottom-left-radius: 15px;
+	display: none;*/
+	position: absolute;
+	width: 293px;
+	height: 57px;
+	padding-top: 20px;
+	background-color: rgba(167, 184,173, 0.3);
+	border-bottom-right-radius: 7px;
+	border-bottom-left-radius: 7px;
 	display: none;
+	z-index: 12;
 }
 .catalog-ice .btn-show-catalog {
-	position: relative;
+	/*position: relative;
     top: -25px;
 	width: 168px;
 	margin: 0 46px;
+	padding: 10px 16px;
+	text-align: center;
+	font-size: 18px;
+	line-height: 24px;
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	text-decoration: none;
+	text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+	background: #f26843;
+	background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+	border-radius: 100px;
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);*/
+	width: 168px;
 	padding: 10px 16px;
 	text-align: center;
 	font-size: 18px;
@@ -816,10 +874,10 @@ body > input[type="radio"] {
 	/*-- БЛОК ОПИСАНИЯ КОМПАНИИ --*/
 .description {
 	width: 1116px;
-	height: 281px;
+	height: 287px;
 	background-image: url("../img/wafer.jpg");
 	background-repeat: no-repeat;
-	padding-top: 19px;
+	padding-top: 24px;
 	padding-left: 20px;
 	padding-right: 10px;
 	border-radius: 15px;	
@@ -920,8 +978,8 @@ body > input[type="radio"] {
 .news-sub {
 	width: 1146px;
 	height: 220px;
-	margin-top: 41px;
-	margin-bottom: 40px;
+	margin-top: 35px;
+	margin-bottom: 38px;
 }
 .news-sub .news {
 	float: left;
@@ -1763,7 +1821,6 @@ body > input[type="radio"] {
 .search-form .search:focus {
 	border: 2px solid #8fbdec;
 }/*-- /ОКНО ПОИСКА --*/
-
 
 	/*-- ФОРМА ВХОДА --*/
 .modal-in {
