--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,6 @@ footer a:active,
 .user-block {
 	float: right;
 	max-width: 428px;
-	/*margin-top: 9px;*/
 	margin-top: 23px;
 }
 .user-block .login,
@@ -220,7 +219,6 @@ footer a:active,
 	vertical-align: top;
 	display: inline-block;
 	margin: 0;
-	/*margin-top: 14px;*/
 	padding: 8px 0px;
 	text-decoration: none;
 	font-size: 14px;
@@ -244,7 +242,6 @@ footer a:active,
 	display: inline-block;
 	vertical-align: top;
 	margin: 0;
-	/*margin-top: 14px;*/
 	padding-left: 13px;
     padding-right: 20px;
     padding-bottom: 8px;
@@ -277,7 +274,6 @@ footer a:active,
 	position: relative;
 	display: inline-block;
 	margin: 0;
-	/*margin-top: 14px;*/
 	padding: 8px 0px;
 	padding-left: 43px;
     padding-right: 17px;
@@ -319,6 +315,9 @@ footer a:active,
 }
 .user-block .link-modal-search:hover .modal-search {
 	display: block;
+}
+.user-block .search:hover .modal-search {
+	display: block;
 }/*-- /ПОИСК ИКОНКА--*/
 	
 	/*-- ВХОД ИКОНКА--*/
@@ -340,7 +339,8 @@ footer a:active,
 }
 .link-modal-in:hover .modal-in {
 	display: block;
-}/*-- /ВХОД ИКОНКА--*/
+}
+/*-- /ВХОД ИКОНКА--*/
 
 	/*-- КОРЗИНА ИКОНКА--*/
 .user-block .basket::after {
@@ -1703,13 +1703,13 @@ body > input[type="radio"] {
 	/*-- ФОРМА ПОИСКА --*/
 .modal-search {
 	display: none;
+	width: 311px;
+	height: 44px;
 	position: absolute;
-	width: 341px;
 	top: 50px;
 	right: 1px;
 	border-radius: 5px;
-	width: 341px;
-	height: 84px;
+	padding: 20px 15px;
 	background: #f8f7f4;
 	box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 	font-size: 14px;
@@ -1720,34 +1720,31 @@ body > input[type="radio"] {
 	z-index: 12;
 }
 .modal-search  .search-form {
-	width: 341px;
-    padding: 20px 15px;
+	width: 309px;
+	height: 44px;
 }
-.modal-search input[type="search"] {
-	width: 312px;
-	height: 43px;
-	background-color: #ffffff;
-}
-.search-form .search {
-	width: 294px;
+.search-form .search-input {
+	width: 295px;
+	/*width: 309px; IE норм работает с типом search а хром хреново*/
 	height: 42px;
-	border-radius: 15px;
 	margin: 0;
 	padding-left: 14px;
 	padding-top: 0;
 	padding-bottom: 0;
+	padding-right: 0;
 	font-size: 14px;
 	line-height: 24px;
 	color: #999999;
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	border-radius: 5px;
+	background-color: #ffffff;
 	border: 1px solid #d3d3d2;
 }
-.search-form .search:hover {
+.search-form .search-input:hover {
 	border: 2px solid #d3d3d2;
 }
-.search-form .search:focus {
+.search-form .search-input:focus {
 	border: 2px solid #8fbdec;
 }/*-- /ОКНО ПОИСКА --*/
 
