--- a/css/style.css
+++ b/css/style.css
@@ -1933,7 +1933,7 @@ body > input[type="radio"] {
 }
 .feedback-form .feedback-name:hover,
 .feedback-form .feedback-email:hover {
-	border: 2px solid #d3d3d2;
+	border: 2px solid #c7c6c5;
 }
 .feedback-form .feedback-name:active,
 .feedback-form .feedback-email:active {
@@ -1958,7 +1958,7 @@ body > input[type="radio"] {
 	border: 1px solid #d3d3d2;
 }
 .feedback-form .feedback-text:hover {
-	border: 2px solid #d3d3d2;
+	border: 2px solid #c7c6c5;
 }
 .feedback-form .feedback-text:active {
 	border: 2px solid #8fbdec;
@@ -1978,8 +1978,8 @@ body > input[type="radio"] {
 	text-decoration: none;
 	text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
 	background: #f26843;
-	background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
 	background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
 	background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
 	border-radius: 100px;
 	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
