--- a/css/style.css
+++ b/css/style.css
@@ -1998,6 +1998,20 @@ body > input[type="radio"] {
 	background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
 	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }/*-- /ОКНО ОБРАТНОЙ СВЯЗИ--*/
+@keyframes bonuce {
+  0%   {
+    transform: translateX(-2000px);
+  }
+  70%  {
+    transform: translateX(30px);
+  }
+  90%  {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 	/*-- ФОРМА НАЛИЧИЯ ТОВАРА В КОРЗИНЕ--*/
 .order-in-basket {
 	position: absolute;
@@ -2132,4 +2146,5 @@ body > input[type="radio"] {
 }
 .modal-content-show {
   display: block;
+  animation: bonuce 0.6s;
 }
