--- a/css/style.css
+++ b/css/style.css
@@ -1866,8 +1866,8 @@ min-height: 71px;
 	/*-- ФОРМА ОБРАТНОЙ СВЯЗИ--*/
 .modal-feedback	{
 	display: none;
-	position: absolute;
-	top: 1870px;
+	position: fixed;
+	top: 25%;
 	right: 395px;
 	border-radius: 5px;
 	display: none;
@@ -2141,6 +2141,7 @@ min-height: 71px;
 	display: none;
 	width: 1200px;
 	height: 429px;
+	z-index: 14;
 	margin-top: -280px;
 	margin-left: -609px;
 	border: 7px solid white;
@@ -2151,7 +2152,7 @@ min-height: 71px;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 14;
+  z-index: 13;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
