сдела проценыт выпадания форме обратной связи

--- a/css/style.css
+++ b/css/style.css
@@ -1871,7 +1871,7 @@ min-height: 71px;
 	display: none;
 	position: fixed;
 	top: 25%;
-	right: 395px;
+	right: 31%;
 	border-radius: 5px;
 	display: none;
 	width: 477px;
