исправил некоторые ошибки

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,15 @@ body {
 .main a:hover,
 .breadcrumbs a:hover, 
 footer a:hover,
-.footer-contacts a:hover {
+.footer-contacts a:hover,
+.ice-cost-catalog a {
 	color: #ffbc9e;
 }
 .main a:active,
 .breadcrumbs a:active, 
 footer a:active,
-.footer-contacts a:active {
+.footer-contacts a:active,
+.ice-cost-catalog a  {
 	color: #ffbc9e;
 }
 .clearfix {
@@ -403,7 +405,6 @@ min-height: 79px;
 
 /*-- БЛОК ХЛЕБНЫХ КРОШЕК--*/
 .breadcrumbs {
-	float: left;
 	width: 300px;
 	height: 20px;
 	margin-top: 20px;
@@ -693,6 +694,9 @@ body > input[type="radio"] {
 .catalog {	
 	margin-top: 34px;
 }
+.ice-cost-index {
+	position: relative;
+}
 .catalog .catalog-ice {
 	float: left;
 	width: 293px;
@@ -745,7 +749,7 @@ body > input[type="radio"] {
 	display: block;
     padding-left: 18px;
     padding-right: 18px;
-    margin-top: 7px;
+    margin-top: 6px;
 	text-align: center;
 	font-size: 16px;
 	line-height: 22px;
@@ -806,7 +810,6 @@ body > input[type="radio"] {
 	/*-- БЛОК ОПИСАНИЯ КОМПАНИИ --*/
 .description {
 	width: 1116px;
-	height: 272px;
 	background-image: url("../img/wafer.jpg");
 	background-repeat: no-repeat;
 	padding-top: 24px;
@@ -822,7 +825,7 @@ body > input[type="radio"] {
 .description .make {
 	float: left;
 	width: 545px;
-	height: 180px;
+	height: 189px;
 	margin-top: 22px;
 }
 .description .delivery {
@@ -913,16 +916,14 @@ body > input[type="radio"] {
 	/*-- БЛОК НОВОСТЕЙ И ПОДПИСКА НА РАССЫЛКУ --*/
 .news-sub {
 	width: 1146px;
-	height: 220px;
 	margin-top: 39px;
 	margin-bottom: 40px;
 }
 .news-sub .news {
 	float: left;
 	width: 520px;
-    height: 174px;
     padding-top: 23px;
-    padding-bottom: 23px;
+    padding-bottom: 80px;
     padding-left: 20px;
     padding-right: 20px;
 	border-radius: 15px;
@@ -954,7 +955,6 @@ body > input[type="radio"] {
 .news-sub .sub {
 	float: right;
 	width: 548px;
-    height: 210px;
     padding: 5px 6px;
 	background-image: url("../img/sub.jpg");
 	border-radius: 15px;
@@ -1037,7 +1037,6 @@ body > input[type="radio"] {
 .driving-address .driving {
 	display: inline-block;
 	width: 250px;
-    height: 305px;
     padding: 0 26px;
 	background-color: white;
 	border-radius: 15px;
@@ -1088,8 +1087,8 @@ body > input[type="radio"] {
 	width: 252px;
 	margin-top: 26px;
 	margin-right: 0px;
-	margin-bottom: 30px;
-	padding: 8px 0px;
+	margin-bottom: 31px;
+	padding: 9px 0px;
 	text-align: center;
 	font-size: 18px;
 	line-height: 24px;
@@ -1146,6 +1145,9 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.selection-ice form {
+	height: 138px;
 }
 	/*-- СОРТИРОВКА --*/
 .sorting {
@@ -1464,7 +1466,6 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	text-decoration: underline;
 }
 .case-catalog .btn-hover-shadow {
 	position: absolute;
