--- a/css/style.css
+++ b/css/style.css
@@ -409,14 +409,13 @@ min-height: 79px;
 /*-- БЛОК ХЛЕБНЫХ КРОШЕК--*/
 .breadcrumbs {
 	width: 300px;
-	height: 20px;
-	margin-top: 20px;
 }
 .bread-main-nav {
     list-style: none;
-	height: 30px;
 	padding: 0;
 	margin: 0;
+	margin-bottom: 0;
+    margin-top: 19px;
 }
 .bread-main-nav  li {
 	display: inline-block;
