--- a/css/style.css
+++ b/css/style.css
@@ -1169,8 +1169,8 @@ body > input[type="radio"] {
 }
 .sorting select {
 	width: 192px;
-	padding-left: 12px;
-	padding-top: 7px;
+	padding-left: 14px;
+	padding-top: 9px;
 	padding-bottom: 8px;
 	padding-right: 14px;
 	margin-top: 4px;
@@ -1179,25 +1179,34 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	background: #9db1a5;
 	border-radius: 100px;
 	outline: none;
-	border: none;
+	border: none;	
+	-webkit-appearance: none; /*Removes default chrome and safari style*/
+	-moz-appearance: none; /* Removes Default Firefox style*/
+	appearance: none;
+	text-indent: 0.01px; /* Removes default arrow from firefox*/
+	text-overflow: ""; /*Removes default arrow from firefox*/
+	background: #9db1a5 url("../img/marker_wight.png") no-repeat;
+	background-position: 92% 15px; /*Position of the background-image*/
 }
 .sorting select:hover {
-	background: #ffffff;
+	background: #ffffff url("../img/marker_black.png") no-repeat;
+	background-position: 92% 15px;
 	color: #000000;
 	outline: none;
 	border: none;
 }
 .sorting select:active {
-	background: #ffffff;
+	background: #ffffff url("../img/marker_black.png") no-repeat;
+	background-position: 92% 15px;
 	color: #000000;
 	outline: none;
 	border: none;
 }
 .sorting select:focus {
-	background: #ffffff;
+	background: #ffffff url("../img/marker_black.png") no-repeat;
+	background-position: 92% 15px;
 	color: #000000;
 	outline: none;
 	border: none;
@@ -1891,7 +1900,7 @@ footer {
 	color: #999999;
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	z-index: 12;
+	z-index: 30;
 }
 .btn-modal-feedback-close {
 	position: absolute;
@@ -2022,6 +2031,7 @@ footer {
 	90%		{transform: translateX(-10px);}
 	100%	{transform: translateX(0);}
 }
+	
 	/*-- ФОРМА НАЛИЧИЯ ТОВАРА В КОРЗИНЕ--*/
 .order-in-basket {
 	position: absolute;
@@ -2131,7 +2141,7 @@ footer {
 	font-family: "Roboto", "Tahoma", sans-serif;
 }
 	
-	/*-- КАРТА --*/
+	/*-- КАРТА И ОВЕРЛЭЙ ОБРАТНОЙ СВЯЗИ--*/
 .modal-map {
 	position: fixed;
 	top: 50%;
@@ -2150,7 +2160,7 @@ footer {
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 13;
+	z-index: 25;
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
@@ -2158,4 +2168,17 @@ footer {
 .modal-content-show {
 	display: block;
 	animation: bonuce 0.6s;
+}
+.feedback-overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 30;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.3);
+}
+.modal-feedback-overlay {
+	display: block;
 }
