--- a/css/style.css
+++ b/css/style.css
@@ -829,13 +829,13 @@ body > input[type="radio"] {
 .description .make {
 	float: left;
 	width: 545px;
-	height: 189px;
+	min-height: 189px;
 	margin-top: 22px;
 }
 .description .delivery {
 	float: left;
-	width: 545px;
-	height: 180px;
+	width: 520px;
+	min-height: 180px;
 	margin-top: 6px;
     margin-left: 21px;
 }
@@ -852,6 +852,7 @@ body > input[type="radio"] {
 .make p {
 	position: relative;
 	display: inline-block;
+	width: 477px;
 	padding-left: 57px;
 	margin-top: 0px;
 	margin-bottom: 0;
@@ -885,7 +886,7 @@ body > input[type="radio"] {
 .delivery p {
 	position: relative;
 	display: inline-block;
-	width: 480px;
+	width: 472px;
 	margin-left: 0px;
 	padding-left: 57px;
 	margin-bottom: 0;
